# packaging_tutorial

./: README.md  pyproject.toml
src/example_package_gmweinberg/: example.py
