[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_gmweinberg"
version = "0.0.1"
authors = [
  { name="George Weinberg", email="gmweinberg@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gmweinberg/packaging_tutorial"
Issues = "https://github.com/gmweinberg/packaging_tutorial/issues"
